Fix sidebar margins on smaller screens

--- a/styles/components/_toc.scss
+++ b/styles/components/_toc.scss
@@ -1,6 +1,7 @@
 .toc-nav__wrapper {
   float: left;
   margin-top: -1em;
+  margin-right: 1em;
   padding: 1em;
   padding-top: 2.5em;
 
@@ -47,18 +48,12 @@
 
 @include media-query(lap) {
   .toc-nav__wrapper {
-    margin-left: 1em;
-
     max-width: 200px;
   }
 }
 
 @include media-query(palm) {
   .toc-nav__wrapper {
-    /*
-    float: inherit;
-    max-width: 100%;
-    */
     display: none;
   }
 }
